--- a/hack/keycloak-themes/theme/cloudpak/login/resources/css/styles467.css
+++ b/hack/keycloak-themes/theme/cloudpak/login/resources/css/styles467.css
@@ -296,7 +296,7 @@ a[tabindex="5"] {
   border-color: transparent;
 }
 
-#kc-social-providers h4 {
+#kc-social-providers h4, #kc-social-providers h2 {
   font-size: 12px;
   line-height: 16px;
   letter-spacing: .32px;
