--- a/hack/keycloak-themes/theme/cloudpak/login/resources/css/styles4100.css
+++ b/hack/keycloak-themes/theme/cloudpak/login/resources/css/styles4100.css
@@ -22,7 +22,7 @@ body .login-pf-page {
   background: #161616 !important;
 }
 
-.login-pf-page a {
+.login-pf-page a, #reset-login {
   color: #78A9FF;
 }
 
@@ -120,8 +120,8 @@ body .login-pf-page {
   outline-offset: -2px;
 }
 
-/* login button and submit button */
-#kc-login, .pf-c-button.pf-m-primary.pf-m-block.btn-lg {
+/* login button, submit button, buttons on other panels */
+#kc-login, .pf-c-button.pf-m-primary.pf-m-block.btn-lg, .pf-c-button.pf-m-primary.btn-lg, .pf-c-button.btn-default.btn-lg {
   border: 1px solid transparent;
   background-color: #0f62fe;
   color: #fff;
@@ -134,11 +134,34 @@ body .login-pf-page {
   outline: none;
 }
 
-#kc-login:hover, .pf-c-button.pf-m-primary.pf-m-block.btn-lg:hover {
-  background-color: #0353e9
+/* for update password screen */
+#kc-form-buttons {
+  display: flex;
+  flex-direction: row-reverse;
+}
+.pf-c-button.pf-m-primary.btn-lg {
+  width: 100%;
+}
+/* cancel button */
+.pf-c-button.btn-default.btn-lg {
+  background-image: none;
+  background-color: #393939;
+  width: 100%;
+  margin-right: 1px;
+}
+.pf-c-button.btn-default.btn-lg::after {
+  min-height: 3rem;
 }
 
-#kc-login:focus, .pf-c-button.pf-m-primary.pf-m-block.btn-lg:hover {
+#kc-login:hover, .pf-c-button.pf-m-primary.pf-m-block.btn-lg:hover, .pf-c-button.pf-m-primary.btn-lg:hover {
+  background-color: #0353e9;
+}
+.pf-c-button.btn-default.btn-lg:hover {
+  background-color: #474747;
+}
+
+#kc-login:focus, .pf-c-button.pf-m-primary.pf-m-block.btn-lg:focus, .pf-c-button.pf-m-primary.btn-lg:focus,
+.pf-c-button.btn-default.btn-lg:focus {
   border-color: #fff;
   box-shadow: inset 0 0 0 1px #fff,inset 0 0 0 2px #161616;
 }
@@ -357,6 +380,28 @@ a:visited,:active {
   margin: 0 .25rem 0 0;
 }
 
+/* infor alert */
+.alert-info.pf-c-alert.pf-m-inline.pf-m-info {
+  background: #262626;
+  color: #f4f4f4;
+  border-left: 3px solid #4589ff;
+  border-top: none;
+  font-size: 14px;
+  font-weight: 200;
+  line-height: 18px;
+  letter-spacing: .16px;
+  margin: 0 .25rem 0 0;
+}
+
 #kc-form-options .checkbox {
   margin-bottom: 20px;
+}
+
+#kc-attempted-username {
+  line-height: 40px;
+  letter-spacing: 0;
+  color: #f4f4f4;
+  font-size: 32px;
+  text-align: left;
+  margin: 0px;
 }
